css/style.css
html{
    scroll-behavior: smooth;
}
body{
    font-family: 'Lato', sans-serif;
    font-weight: 500;
    color: var(--main-color-text);
}
.body.js--lock{
    overflow: hidden;
}
.container{
    max-width: 1588px;
    width: 100%;
    padding: 0 1rem;
    margin: 0 auto;
}
.container.container--large{
    max-width: 1752px;
}

.title{
    padding: 1.5rem 2rem;
    background-color: var(--main-color);
    font-size: 2rem;
    display: inline;
    text-transform: uppercase;
}
.title.title--right{
    position: absolute;
    top: 0;
    left: 0;
    transform: translate(-6rem, -50%);
}
.title.title--second{
    font-size: 1.5rem;
    padding: 0.75rem 2rem;
}
.text{
    font-size: 1.75rem;
    line-height: 140%;
}

/*HEADER START*/
.header{
    position: sticky;
    top: 0;
    background-color: white;
    z-index: 10;
}
.header__inner{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1.25rem 0;
}
.header__wrapper{
    width: 100%;
}
.header-logo{
    display: flex;
}
.burger{
    display: none;
    position: relative;
    width: 1.75rem;
    height: 1.375rem;
    align-items: center;
}
.burger__line{
    height: 3px;
    width: 100%;
    border-radius: 5px;
    background-color: var(--main-color-text-second);
    transition: all .3s;
}
.burger__line--top{
    position: absolute;
    top: 0;
    left: 0;
}
.burger__line--bottom{
    position: absolute;
    bottom: 0;
    left: 0;
}
.nav__list{
    position: absolute;
    top: 51%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    max-width: 448px;
    column-gap: 7.5rem;
}
.nav__item{
    display: flex;
}
.nav__item.nav__item--mobile{
    display: none;
}
.nav__link{
    font-size: 1.25rem;
    line-height: 100%;
    text-decoration: none;
    color: var(--main-color-text-second); 
    transition: all .3s;
    cursor: pointer;
}
.nav__link:hover{
    opacity: .6;
}

.button-lang__header{
    display: flex;
    align-items: center;
}
.button-lang__icon{
    margin-right: 1rem;
}
/*HEADER END*/

/*SECTION HERO START*/
.section{
    padding: 6.5rem 0;
}
.section.hero{
    display: flex;
    padding: 6rem 0rem 6rem;
    position: relative;
}
.section__inner{
    position: relative;
    width: 100%;
}
.section-image__box{
    position: absolute;
    bottom: -7.5rem;
    left: 2rem;
    width: 1064px;
    transform: translateX(-100%);
    object-fit: cover;
    object-position: center;
}
.section__body{
    max-width: 791px;
    margin-left: auto;
    margin-bottom: 5rem;
    position: relative;
}
.section__box{
    display: flex;
    flex-direction: column;
    row-gap: 2rem;
    border: 0.9375rem solid #000000;
    padding: 7.875rem 6.5rem 6.5rem;
}
/*SECTION HERO END*/

.section.section--bg-grey{
    background-color: var(--bg-grey);
}
.section.about{
    position: relative;
    overflow: hidden;
    padding: 6.25rem 0;
}
.bg-square{
    position: absolute;
    top: 0;
    right: 0;
    width: 27vw;
    height: 100%;
    background-color: var(--main-color);
    z-index: 0;
}
.about__inner{
    position: relative;
    width: 100%;
    display: flex;
    justify-content: flex-start;
    column-gap: 5.625rem;
    z-index: 2;
}
.about__body{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    max-width: 600px;
    padding: 5.375rem 0;
    width: 100%;
}
.about__text{
    margin-top: 2.5rem;
}
.about__img{
    position: absolute;
    left: calc(100% + 5.625rem);
    top: 50%;
    transform: translateY(-50%);
    max-height: 100%;
    width: 60vw;
    object-fit: cover;
    object-position: center;
}
.features{
    width: 100%;
}
.features__list{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 6rem;
}
.features__item{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.features-item__list.features-item__list--width{
    max-width: 261px;
}
.features__header{
    width: 8.125rem;
    min-width: 8.125rem;
    height: 8.125rem;
    border-radius: 50%;
    background-color: var(--main-color);
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 1.25rem;
}
.features__img{
    max-width: 100%;
}
.features__title{
    font-size: 1.75rem;
    text-align: center;
    line-height: 120%;
    margin-bottom: 1rem;
    white-space: nowrap;
}
.features-item__list{
    font-size: 1.125rem;
    line-height: 155%;
    list-style: disc;
    margin-left: 2rem;
}


.section-video__inner{
    display: grid;
    grid-template-columns: 1fr auto;
}
.video-box{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 3.375rem;
    width: calc(100% + 4rem);
    position: relative;
    z-index: 2;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 645px;
    cursor: pointer;
}
.video-box__button{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 5rem;
    min-width: 5rem;
    height: 5rem;
    border-radius: 50%;
    border: 0.375rem solid #FFFFFF;
    
}
.section.section-logos{
    overflow: hidden;
}
.logos{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.logos__list-wrapper{
    position: relative;
    width: 100%;
    margin-left: 5rem;
}
.logos__list-wrapper::before{
    content: '';
    position: absolute;
    left: -5rem;
    top: 0;
    width: 4rem;
    height: 90%;
    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
}
.logos__list-wrapper::after{
    content: '';
    position: absolute;
    right: 0;
    top: 0;
    width: 4rem;
    height: 90%;
    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
}
/* ... */

